user-admin-app/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-admin-app
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: user-admin-app
