user-admin-app/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-admin-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubedemo.local
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: user-admin-app-lb
              servicePort: 80
